--- a/test/RestSharp.Tests/RestSharp.Tests.csproj
+++ b/test/RestSharp.Tests/RestSharp.Tests.csproj
@@ -9,101 +9,36 @@
     <ProjectReference Include="..\..\src\RestSharp\RestSharp.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <None Update="SampleData\GoodreadsFormatError.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\header_and_rows.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\4sq.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\bearertoken.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\boolean_from_number.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\boolean_from_string.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\datetimes.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\deserialize_as_list.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\directlists.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\eventful.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\GenericWithList.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\Goodreads.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\GoogleWeather.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\InlineListSample.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\iso8601datetimes.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\jsonarray.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\jsondictionary.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\jsondictionary_KeysType.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\jsondictionary_null.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\jsonenums.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\jsonenumtypes.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\jsonlists.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\Lastfm.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\ListWithAttributes.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\NestedListSample.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\objectproperty.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\person.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\restsharp.nuspec">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\sojson.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\timespans.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\underscore_prefix.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="SampleData\xmllists.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <EmbeddedResource Include="SampleData\timespans.json" />
+    <EmbeddedResource Include="SampleData\4sq.json" />
+    <EmbeddedResource Include="SampleData\bearertoken.json" />
+    <EmbeddedResource Include="SampleData\datetimes.json" />
+    <EmbeddedResource Include="SampleData\jsondictionary.json" />
+    <EmbeddedResource Include="SampleData\jsondictionary_KeysType.json" />
+    <EmbeddedResource Include="SampleData\jsondictionary_null.json" />
+    <EmbeddedResource Include="SampleData\iso8601datetimes.json" />
+    <EmbeddedResource Include="SampleData\sojson.json" />
+    <EmbeddedResource Include="SampleData\GenericWithList.json" />
+    <EmbeddedResource Include="SampleData\person.json" />
+    <EmbeddedResource Include="SampleData\objectproperty.json" />
+    <EmbeddedResource Include="SampleData\jsonarray.json" />
+    <EmbeddedResource Include="SampleData\jsonlists.json" />
+    <EmbeddedResource Include="SampleData\underscore_prefix.json" />
+    <EmbeddedResource Include="SampleData\jsonenumtypes.json" />
+    <EmbeddedResource Include="SampleData\jsonenums.json" />
+    <EmbeddedResource Include="SampleData\xmllists.xml" />
+    <EmbeddedResource Include="SampleData\ListWithAttributes.xml" />
+    <EmbeddedResource Include="SampleData\InlineListSample.xml" />
+    <EmbeddedResource Include="SampleData\directlists.xml" />
+    <EmbeddedResource Include="SampleData\boolean_from_number.xml" />
+    <EmbeddedResource Include="SampleData\boolean_from_string.xml" />
+    <EmbeddedResource Include="SampleData\deserialize_as_list.xml" />
+    <EmbeddedResource Include="SampleData\eventful.xml" />
+    <EmbeddedResource Include="SampleData\Goodreads.xml" />
+    <EmbeddedResource Include="SampleData\GoodreadsFormatError.xml" />
+    <EmbeddedResource Include="SampleData\GoogleWeather.xml" />
+    <EmbeddedResource Include="SampleData\header_and_rows.xml" />
+    <EmbeddedResource Include="SampleData\Lastfm.xml" />
+    <EmbeddedResource Include="SampleData\NestedListSample.xml" />
   </ItemGroup>
 </Project>
