--- a/package.json
+++ b/package.json
@@ -1,11 +1,29 @@
-{
-  "devDependencies": {
-    "vuepress": "^1.8.2",
-    "glob-parent": "^5.1.2",
-    "normalize-url": "^4.5.1"
-  },
-  "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
-  }
-}
+
+# package name
+name: com.minijoy.restsharp
+# package display name
+displayName: Unity Package Example
+# package description
+description: An unity restsharp package  
+# repository url
+repoUrl: 'https://github.com/xxhong/RestSharp'
+# forked repository url
+parentRepoUrl: null
+# spdx license id
+licenseSpdxId: MIT
+# license name
+licenseName: MIT License
+# list of topic slugs
+topics:
+  - utilities
+# Filter Git tags based on prefix. Used by monorepos to separate pacakges
+gitTagPrefix: ''
+# A regular expression to ignore Git tags
+gitTagIgnore: '-master$'
+# Minimal version to build
+minVersion: '1.0.1'
+# featured image fit mode: cover (default) or contain
+imageFit: cover
+# readme path
+readme: 'master:README.md'
+
